test/fixtures/diagnostics/type-checker/negative/multiplicative-compound-assignment-invalid/input.tysh
namespace Samples.TypeChecker.MultiplicativeCompoundAssignmentInvalid

record Box(Value: int)

fun immutableLocal(): int {
  let value = 1
  value *= 2
  value
}

fun invalidTarget(): int {
  1 /= 2
  0
}

fun boolTarget(): bool {
  let mut flag = true
  flag *= false
  flag
}

fun stringTarget(): string {
  let mut text = "ok"
  text /= "x"
  text
}

fun nullableOperand(): int {
  let mut value: int = 1
  let maybe: int? = null
  value %= maybe
  value
}

fun nonAssignableResult(value: int, extra: long): int {
  let mut result = value
  result *= extra
  result
}

fun structuralTarget(box: Box): int {
  let mut current = box
  current *= 2
  0
}

enum RateKind {
  Basic
  Advanced
}

fun enumTarget(kind: RateKind): RateKind {
  let mut current = kind
  current *= kind
  current
}

fun mixedDecimalFloating(value: decimal, factor: double): decimal {
  let mut result = value
  result *= factor
  result
}

fun narrowingFloat(value: float, factor: double): float {
  let mut result = value
  result *= factor
  result
}

fun nullableFloat(value: float, maybe: float?): float {
  let mut result = value
  result /= maybe
  result
}
